[gd_scene load_steps=8 format=2]

[ext_resource path="res://Level2.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/tilemap.tres" type="TileSet" id=3]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/fixedsys.tres" type="DynamicFont" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]

[sub_resource type="ParticlesMaterial" id=1]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 4.123, 5.625, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 0.01
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.45
scale_random = 0.41
color = Color( 1, 0.372549, 0.25098, 1 )

[node name="Level2" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 128, 120 )

[node name="DeathParticles" parent="Player" index="5"]
process_material = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_left = 0.08
drag_margin_top = 0.08
drag_margin_right = 0.08
drag_margin_bottom = 0.08

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -1441792, 3, 0, -1441791, 0, 0, -1441790, 0, 0, -1441789, 0, 0, -1441788, 0, 0, -1441787, 0, 0, -1441786, 0, 0, -1441785, 0, 0, -1441784, 0, 0, -1441783, 0, 0, -1441782, 0, 0, -1441781, 0, 0, -1441780, 4, 0, -1376256, 0, 0, -1376255, 5, 0, -1376245, 6, 0, -1376244, 0, 0, -1310720, 0, 0, -1310719, 8, 0, -1310709, 10, 0, -1310708, 0, 0, -1245184, 0, 0, -1245183, 8, 0, -1245173, 10, 0, -1245172, 0, 0, -1179648, 0, 0, -1179647, 8, 0, -1179637, 10, 0, -1179636, 0, 0, -1114112, 0, 0, -1114111, 8, 0, -1114101, 10, 0, -1114100, 0, 0, -1048576, 0, 0, -1048575, 8, 0, -1048565, 10, 0, -1048564, 0, 0, -983040, 0, 0, -983039, 8, 0, -983035, 20, 0, -983034, 7, 0, -983033, 21, 0, -983029, 10, 0, -983028, 0, 0, -917504, 0, 0, -917503, 8, 0, -917499, 10, 0, -917498, 19, 0, -917497, 8, 0, -917493, 10, 0, -917492, 0, 0, -851968, 0, 0, -851967, 8, 0, -851963, 10, 0, -851962, 19, 0, -851961, 8, 0, -851957, 10, 0, -851956, 0, 0, -786432, 0, 0, -786431, 8, 0, -786427, 10, 0, -786426, 0, 0, -786425, 8, 0, -786421, 10, 0, -786420, 0, 0, -720896, 0, 0, -720895, 8, 0, -720891, 10, 0, -720890, 0, 0, -720889, 8, 0, -720885, 10, 0, -720884, 0, 0, -655360, 0, 0, -655359, 8, 0, -655355, 10, 0, -655354, 0, 0, -655353, 8, 0, -655349, 10, 0, -655348, 0, 0, -589824, 0, 0, -589823, 8, 0, -589819, 10, 0, -589818, 0, 0, -589817, 8, 0, -589813, 10, 0, -589812, 0, 0, -524288, 0, 0, -524287, 8, 0, -524283, 10, 0, -524282, 0, 0, -524281, 8, 0, -524277, 10, 0, -524276, 0, 0, -458752, 0, 0, -458751, 8, 0, -458747, 10, 0, -458746, 0, 0, -458745, 8, 0, -458741, 10, 0, -458740, 0, 0, -393216, 0, 0, -393215, 8, 0, -393211, 10, 0, -393210, 0, 0, -393209, 8, 0, -393205, 10, 0, -393204, 0, 0, -327680, 0, 0, -327679, 8, 0, -327675, 10, 0, -327674, 0, 0, -327673, 8, 0, -327669, 10, 0, -327668, 0, 0, -327667, 4, 0, -262144, 0, 0, -262143, 8, 0, -262139, 10, 0, -262138, 0, 0, -262137, 8, 0, -262132, 6, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 0, -262126, 0, 0, -262125, 4, 0, -196608, 0, 0, -196607, 8, 0, -196603, 10, 0, -196602, 0, 0, -196601, 8, 0, -196590, 6, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 4, 0, -131072, 0, 0, -131071, 8, 0, -131067, 10, 0, -131066, 0, 0, -131065, 8, 0, -131053, 9, 0, -131052, 9, 0, -131051, 9, 0, -131050, 9, 0, -131049, 9, 0, -131048, 6, 0, -131047, 0, 0, -65536, 0, 0, -65535, 8, 0, -65531, 10, 0, -65530, 0, 0, -65529, 8, 0, -65512, 10, 0, -65511, 0, 0, 0, 0, 0, 1, 4, 0, 5, 10, 0, 6, 0, 0, 7, 8, 0, 24, 10, 0, 25, 0, 0, 65536, 0, 0, 65537, 12, 0, 65541, 10, 0, 65542, 0, 0, 65543, 8, 0, 65548, 7, 0, 65549, 7, 0, 65550, 7, 0, 65560, 10, 0, 65561, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131096, 10, 0, 131097, 0, 0, 196608, 0, 0, 196632, 10, 0, 196633, 0, 0, 262144, 0, 0, 262163, 7, 0, 262164, 7, 0, 262165, 7, 0, 262166, 7, 0, 262167, 7, 0, 262168, 3, 0, 262169, 0, 0, 327680, 0, 0, 327698, 3, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 5, 0, 393216, 0, 0, 393233, 11, 0, 393234, 0, 0, 393235, 5, 0, 458752, 0, 0, 458769, 11, 0, 458770, 0, 0, 589816, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 15, 0, 524301, 7, 0, 524302, 7, 0, 524303, 7, 0, 524304, 7, 0, 524305, 3, 0, 524306, 0, 0, 655352, 2, 0, 655353, 2, 0, 655354, 2, 0, 655355, 2, 0, 655356, 2, 0, 655357, 2, 0, 655358, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 18, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 5, 0, 720888, 2, 0, 720889, 2, 0, 720890, 2, 0, 720891, 2, 0, 720892, 2, 0, 720893, 2, 0, 720894, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 18, 0, 786424, 2, 0, 786425, 2, 0, 786426, 2, 0, 786427, 2, 0, 786428, 2, 0, 786429, 2, 0, 786430, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 18, 0, 851960, 2, 0, 851961, 2, 0, 851962, 2, 0, 851963, 2, 0, 851964, 2, 0, 851965, 2, 0, 851966, 2, 0, 851967, 2, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 18, 0, 917496, 2, 0, 917497, 2, 0, 917498, 2, 0, 917499, 2, 0, 917500, 2, 0, 917501, 2, 0, 917502, 2, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 18, 0, 983032, 2, 0, 983033, 2, 0, 983034, 2, 0, 983035, 2, 0, 983036, 2, 0, 983037, 2, 0, 983038, 2, 0, 983039, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 18, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Polygon2D" type="Polygon2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -128, -24 )
color = Color( 0.141176, 0.631373, 0.611765, 1 )
polygon = PoolVector2Array( -128, -392, -128, -40, -128, 312, 728, 312, 728, -392 )
__meta__ = {
"_edit_group_": true
}

[node name="Cannon" parent="." instance=ExtResource( 4 )]
position = Vector2( 232, 104 )

[node name="Cannon2" parent="." instance=ExtResource( 4 )]
position = Vector2( 344, 24 )

[node name="Cannon3" parent="." instance=ExtResource( 4 )]
position = Vector2( 152, -24 )

[node name="Controls" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 72.0
margin_right = 184.0
margin_bottom = 176.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "SOME CANNONS ROTATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="RichTextLabel" parent="."]
visible = false
margin_left = 232.0
margin_top = -216.0
margin_right = 360.0
margin_bottom = -192.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "DOOR IS GOAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wtf" type="RichTextLabel" parent="."]
visible = false
margin_left = 512.0
margin_top = 112.0
margin_right = 552.0
margin_bottom = 152.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.431373, 0.74902, 0.709804, 1 )
text = "wtf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 6 )]
[connection signal="door_touch" from="Player" to="." method="_on_Player_door_touch"]
[connection signal="player_death" from="Player" to="HUD" method="_on_Player_player_death"]
[connection signal="area_entered" from="Player/CannonCollisonDetector" to="." method="_on_CannonCollisonDetector_area_entered"]

[editable path="Player"]

[editable path="Cannon"]
